<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>openai_ros2</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="nicholaskastanos@gmail.com">nicholas</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>turtlebot3_msgs</depend>
  <depend>gazebo_msgs</depend>
  <depend>controller_manager_msgs</depend>
  <depend>rosidl_default_runtime</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>gazebo</exec_depend>
  <exec_depend>openai_ros2_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
